Fix overflow

--- a/src/components/student/Student.component.scss
+++ b/src/components/student/Student.component.scss
@@ -8,6 +8,7 @@
   min-height: 100vh;
   height: auto;
   width: 90%;
+  overflow-x: hidden;
 
   img {
     width: 70%;
